/**
 * Copyright 2013 David Rusek <dave dot rusek at gmail dot com>
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

option java_package = "org.robotninjas.barge.proto";
option java_generic_services = true;
option java_outer_classname = "ClientProto";

import "entry.proto";

message CommitOperation {
	required string client_id = 1;
	required int64 sequence = 2;
	required bytes op = 3;
}

message Redirect {
	required string leader_id = 1;
}

message CommitOperationResponse {
	enum ErrorCode {REDIRECT = 1; NOLEADER = 2;}
	required bool committed = 1;
	optional ErrorCode error_code = 2;
	optional Redirect redirect = 3;
}

service ClientService {
	rpc commitOperation (CommitOperation) returns (CommitOperationResponse);
}